elasticsearch/clusters/eu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elasticsearch
  annotations:
    cert-manager.io/cluster-issuer: "canhnv-com-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kibana.eu.k3s.canhnv.com
      secretName: kibana-eu-tls
  rules:
    - host: kibana.eu.k3s.canhnv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-eu-kb-http
                port:
                  number: 5601
